# media-analysis-platform

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
apps/api/: go.mod  go.sum
apps/mcp-server/: package.json  tsconfig.json  vitest.config.ts
apps/mcp-server/src/: index.ts  main.ts
apps/mcp-server/tests/: api-client.test.ts  index.test.ts  runtime.test.ts  tool-registry.test.ts
apps/telegram-bot/: .env.example  pyproject.toml
apps/telegram-bot/src/telegram_adapter/: __init__.py  __main__.py  api_client.py  gateway.py
apps/telegram-bot/src/telegram_adapter/i18n/: __init__.py  catalogs.py  commands.py  keys.py  service.py  validation.py
apps/telegram-bot/tests/: test_api_client.py  test_gateway.py  test_i18n_catalogs.py  test_i18n_service.py
apps/web/: .env.example  index.html  package.json  pnpm-lock.yaml
apps/web/src/: main.tsx  serve-dist.mjs
apps/web/tests/: api-client.test.ts  env.test.ts  reconciliation.test.tsx  routes.test.tsx  setup.ts
docs/: development-plan.xml  knowledge-graph.xml  operational-packets.xml  requirements.xml  technology.xml  verification-plan.xml
docs/architecture/: cutover-checklist.md  runtime-ops.md
docs/plans/: 2026-04-19-media-analysis-platform-monorepo-migration.md  2026-04-19-telegram-transcriber-platform-monorepo-migration.md  2026-04-23-cutover-continuation-prompt.md
infra/: docker-compose.yml
infra/env/: api.env.example  host-harness.env.example  mcp-server.env.example  minio.env.example  postgres.env.example  shared.env.example  telegram-bot.env.example  worker-agent-runner.env.example  worker-deep-research.env.example  worker-report.env.example  worker-transcription.env.example
infra/host-tools/: deterministic-harness.py  host-harness-client.py  host-harness-server.py
infra/images/telegram-bot/: Dockerfile
infra/images/worker-agent-runner/: Dockerfile
infra/images/worker-transcription/: Dockerfile
infra/init/minio/: bootstrap-buckets.sh
infra/scripts/: compose-smoke.sh
src/media_analysis_platform/: __init__.py  bot.py  config.py
src/telegram_transcriber_bot/: __init__.py  __main__.py  bot.py  cglm_runner.py  config.py  deep_research.py  documents.py  domain.py  media_groups.py  service.py  source_extractor.py  source_labels.py  transcribers.py
tests/: test_bot.py  test_cglm_runner.py  test_cglm_runner_errors.py  test_config.py  test_deep_research.py  test_documents.py  test_host_harness_bridge.py  test_main.py  test_media_groups.py  test_service.py  test_source_extractor.py  test_transcribers.py
(+96 files in other folders)
