[project]
name = "media-analysis-platform"
version = "0.1.0"
description = "Local-first media and source analysis platform with API-owned transcription, reporting, deep research, and thin adapters."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "accelerate>=1.12.0",
  "aiogram>=3.22.0",
  "faster-whisper>=1.2.0",
  "python-docx>=1.2.0",
  "python-dotenv>=1.1.1",
  "torch>=2.9.0",
  "transformers>=4.57.1",
  "youtube-transcript-api>=1.2.3",
  "yt-dlp>=2025.1.15",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.0.0",
]

[project.scripts]
media-analysis-platform = "media_analysis_platform.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/media_analysis_platform"]

[tool.pytest.ini_options]
pythonpath = ["workers/common/src", "src"]
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--ignore=tests/test_deep_research.py",
]
