[project]
name = "media-analysis-telegram-adapter"
version = "0.1.0"
description = "Thin Telegram adapter over the platform HTTP API."
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.22.0",
  "python-dotenv>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_adapter"]
